# text-to-sql-agent

./: README.md  a2as.yaml  pyproject.toml
.github/workflows/: ci.yml
src/texttosql/: .env.example  agent.py  agents.py  callbacks.py  config.py  engine.py  tools.py
src/texttosql/dialects/: dialect.py  factory.py  postgres.py  sqlite.py
tests/: test_agent.py  test_agents.py  test_callbacks.py  test_database.py  test_dialect_base.py  test_dialects.py  test_engine.py  test_tools.py
